--- a/1_Python_Basics/01_basics.ipynb
+++ b/1_Python_Basics/01_basics.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "356739eb",
+   "metadata": {},
+   "source": [
+    "### Syntax and Semantics in Python\n",
+    "Outline:\n",
+    "- Single line Comments and multiline comments \n",
+    "- Definition of Syntax and Semantics\n",
+    "- Basic Syntax Rules in Python\n",
+    "- Understanding Semantics in Python\n",
+    "- Common Syntax Errors and How to Avoid Them\n",
+    "- Practical Code Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6cf95f60",
    "metadata": {},
    "source": [
@@ -261,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
