--- a/01_Practice_Question.ipynb
+++ b/01_Practice_Question.ipynb
@@ -22,10 +22,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "print(\"Hello, World!\")"
    ]
   },
   {
@@ -37,10 +47,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You entered: Hi\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "user_input = input(\"Please enter something: \")\n",
+    "print(f\"You entered: {user_input}\")"
    ]
   },
   {
@@ -52,10 +73,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is positive.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "number = float(input(\"Enter number: \"))\n",
+    "if number > 0:\n",
+    "    print(\"Number is positive.\")\n",
+    "elif number < 0:\n",
+    "    print(\"Number is negative.\")\n",
+    "else:\n",
+    "    print(\"Number is zero.\")"
    ]
   },
   {
@@ -67,10 +104,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest number is 8.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "num1 = float(input(\"Enter first number: \"))\n",
+    "num2 = float(input(\"Enter second number: \"))\n",
+    "num3 = float(input(\"Enter third number: \"))\n",
+    "\n",
+    "if (num1 >= num2) and (num1 >= num3):\n",
+    "    largest = num1\n",
+    "elif (num2 >= num1) and (num2 >= num3):\n",
+    "    largest = num2\n",
+    "else:\n",
+    "    largest = num3\n",
+    "\n",
+    "print(f\"The largest number is {largest}\")\n"
    ]
   },
   {
@@ -82,6 +140,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +158,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,6 +174,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +190,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +206,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +222,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +240,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +256,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +272,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +288,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +304,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,6 +320,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,6 +336,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +352,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +368,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +384,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
