--- a/01_Practice_Question.ipynb
+++ b/01_Practice_Question.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +35,7 @@
    ],
    "source": [
     "# Solution\n",
+    "\n",
     "print(\"Hello, World!\")"
    ]
   },
@@ -54,14 +55,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You entered: Hi\n"
+      "User name is: Shadan\n"
      ]
     }
    ],
    "source": [
     "# Solution\n",
-    "user_input = input(\"Please enter something: \")\n",
-    "print(f\"You entered: {user_input}\")"
+    "\n",
+    "user_name = input(\"Enter user name: \")\n",
+    "print(\"User name is:\",user_name)"
    ]
   },
   {
@@ -73,24 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number is positive.\n"
+      "Number is negative\n"
      ]
     }
    ],
    "source": [
     "# Solution\n",
-    "number = float(input(\"Enter number: \"))\n",
+    "\n",
+    "number = float(input(\"Enter number\"))\n",
     "if number > 0:\n",
     "    print(\"Number is positive.\")\n",
     "elif number < 0:\n",
-    "    print(\"Number is negative.\")\n",
+    "    print(\"Number is negative\")\n",
     "else:\n",
     "    print(\"Number is zero.\")"
    ]
@@ -104,31 +107,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest number is 8.0\n"
+      "Largest number among 3 is:  4.0\n",
+      "The largest number is 4.0\n"
      ]
     }
    ],
    "source": [
     "# Solution\n",
-    "num1 = float(input(\"Enter first number: \"))\n",
-    "num2 = float(input(\"Enter second number: \"))\n",
-    "num3 = float(input(\"Enter third number: \"))\n",
+    "\n",
+    "num1 = float(input(\"Enter first number:\"))\n",
+    "num2 = float(input(\"Enter second number:\"))\n",
+    "num3 = float(input(\"Enter third number\"))\n",
     "\n",
     "if (num1 >= num2) and (num1 >= num3):\n",
-    "    largest = num1\n",
+    "    larget = num1\n",
     "elif (num2 >= num1) and (num2 >= num3):\n",
     "    largest = num2\n",
-    "else:\n",
+    "else: \n",
     "    largest = num3\n",
     "\n",
-    "print(f\"The largest number is {largest}\")\n"
+    "print(\"Largest number among 3 is: \", largest)    ## Python automatically adds a space between the string and the variable.\n",
+    "\n",
+    "print(f\"The largest number is {largest}\")        ## This uses an f-string (formatted string). {largest} inside the string will be replaced by the value of the variable. Uses {} to inject variables\n"
    ]
   },
   {
@@ -140,11 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 5 is 120\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "def factorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n-1)\n",
+    "\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "print(f\"The factorial of {num} is {factorial(num)}\")"
    ]
   },
   {
@@ -158,11 +182,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "name = \"Shadan\"\n",
+    "age = 21\n",
+    "height = 6.0\n",
+    "is_techie = True\n",
+    "\n",
+    "print(name, type(name))\n",
+    "print(age, type(age))\n",
+    "print(height, type(height))\n",
+    "print(is_techie, type(is_techie))\n",
+    "\n",
+    "print(f\"Name is {name} and it's type is {type(name)}\")\n",
+    "print(f\"Age is {age} and it's type is {type(age)}\")\n",
+    "print(f\"Height is {height} and it's type is {type(height)}\")\n",
+    "print(f\"Girl is {is_techie} and it's type is {type(is_techie)}\")"
    ]
   },
   {
@@ -174,11 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "a = 10\n",
+    "b = 5\n",
+    "print(f\"Before swappin a = {a} , b = {b}\")\n",
+    "\n",
+    "a,b = b,a\n",
+    "print(f\"After swapping a = {a}, b = {b}\")"
    ]
   },
   {
@@ -190,11 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "celsius = float(input(\"Enter temperature in celsius: \"))\n",
+    "fahrenheit = (celsius * 9/5) + 32\n",
+    "print(f\"{celsius}°C is equal to {fahrenheit}°F\")"
    ]
   },
   {
@@ -206,11 +256,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "str1 = \"A girl named\"\n",
+    "str2 = \"Shadan\"\n",
+    "concatenated_str = str1 + \" \" + str2\n",
+    "print(concatenated_str)"
    ]
   },
   {
@@ -222,11 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "var = 12.3\n",
+    "if isinstance(var, float):\n",
+    "    print(f\"{var} is a float\")\n",
+    "else:\n",
+    "    print(f\"{var} is not a float\")"
    ]
   },
   {
@@ -240,11 +301,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "a = 5\n",
+    "b = 4\n",
+    "\n",
+    "print(f\"Addition: {a} + {b} = {a + b}\")\n",
+    "print(f\"Subtraction: {a} - {b} = {a - b}\")\n",
+    "print(f\"Multiplication: {a} * {b} = {a * b}\")\n",
+    "print(f\"Division: {a} / {b} = {a / b}\")"
    ]
   },
   {
@@ -256,11 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "a = 23\n",
+    "b = 43\n",
+    "\n",
+    "print(f\"{a} == {b}: {a == b}\")\n",
+    "print(f\"{a} != {b}: {a != b}\")\n",
+    "print(f\"{a} > {b}: {a > b}\")\n",
+    "print(f\"{a} < {b}: {a < b}\")"
    ]
   },
   {
@@ -272,11 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "\n",
+    "a = True\n",
+    "b = False\n",
+    "\n",
+    "print(f\"True and False: {a and b}\")\n",
+    "print(f\"True or False: {a or b}\")\n",
+    "print(f\"not True: {not a}\")"
    ]
   },
   {
@@ -288,11 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n",
+    "num = float(input(\"Enter a number: \"))\n",
+    "square = num ** 2\n",
+    "print(f\"The square of {num} is {square}\")"
    ]
   },
   {
@@ -304,11 +391,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Solution\n"
    ]
   },
   {
