--- a/Practice_Questions/01_Practice_Question.ipynb
+++ b/Practice_Questions/01_Practice_Question.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 1.2: Python Basics\n",
+    "# Module 1: Python Basics\n",
     "## Topics Covered:\n",
     "- Syntax and Semantics\n",
     "- Variables and Data Types\n",
