--- a/Practice_Questions/03_Practice_Questions.ipynb
+++ b/Practice_Questions/03_Practice_Questions.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "91ce2882",
    "metadata": {},
    "outputs": [
@@ -86,26 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
      ]
     }
    ],
@@ -133,8 +114,8 @@
    "source": [
     "# Print the first, middle, and last elements of the list created in Assignment 1.\n",
     "\n",
-    "print(f\"First element: {lst[0]}\")\n",
-    "print(f\"Middle element: {lst[len(lst) // 2]}\")\n",
+    "print(f\"First emlement: {lst[0]}\")\n",
+    "print(f\"Middle elements: {lst[len(lst) // 2]}\")\n",
     "print(f\"Last element: {lst[-1]}\")"
    ]
   },
@@ -158,6 +139,27 @@
     "print(f\"First five elements: {lst[:5]}\")\n",
     "print(f\"Last five elements: {lst[-5:]}\")\n",
     "print(f\"Elements from index 5 to 15: {lst[5:16]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03c8d93e",
+   "metadata": {},
+   "source": [
+    "### Assignment 4: List Comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76855c42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new list containing the squares of the first 10 positive integers using a list comprehension. Print the new list.\n",
+    "\n",
+    "square = [num**2 for num in range(1,10) if num%2==0]\n",
+    "print(square)"
    ]
   }
  ],
