--- a/3_Data_Structures/01_lists.ipynb
+++ b/3_Data_Structures/01_lists.ipynb
@@ -52,6 +52,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "af6f71b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list = list()\n",
+    "print(empty_list)\n",
+    "print(type(empty_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "id": "62a92dd1",
    "metadata": {},
@@ -492,6 +512,59 @@
     "## Iterating with index\n",
     "for index,number in enumerate(numbers):\n",
     "    print(index,number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54950404",
+   "metadata": {},
+   "source": [
+    "### Nested Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "814e1252",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Nested List\n",
+    "lst=[[1,2,3,4],[6,7,8,9],[1,\"Hello\",3.14,\"c\"]]\n",
+    "lst[0][0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ec16d6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 'Hello', 3.14)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst=[[1,2,3,4],[6,7,8,9],(1,\"Hello\",3.14,\"c\")]\n",
+    "lst[2][0:3]"
    ]
   },
   {
