--- a/Practice_Questions/03_Practice_Questions.ipynb
+++ b/Practice_Questions/03_Practice_Questions.ipynb
@@ -151,15 +151,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "76855c42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new list containing the squares of the first 10 positive integers using a list comprehension. Print the new list.\n",
     "\n",
-    "square = [num**2 for num in range(1,10) if num%2==0]\n",
+    "square = [num**2 for num in range(1,10)]\n",
     "print(square)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1267771a",
+   "metadata": {},
+   "source": [
+    "### Assignment 5: Filtering Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2cbe54ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a new list containing only the even numbers from the list created in Assignment 1 using a list comprehension. Print the new list.\n",
+    "\n",
+    "evens = [num for num in lst if num%2==0]\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0cc6b8f",
+   "metadata": {},
+   "source": [
+    "### Assignment 6: List Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d51e7faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [9, 1, 14, 1, 1, 2, 1, 2, 2, 12, 4, 6, 17, 5, 4]\n",
+      "Sorted in ascending order: [1, 1, 1, 1, 2, 2, 2, 4, 4, 5, 6, 9, 12, 14, 17]\n",
+      "Sorted in descending order: [17, 14, 12, 9, 6, 5, 4, 4, 2, 2, 2, 1, 1, 1, 1]\n",
+      "List with duplicates removed: [1, 2, 4, 5, 6, 9, 12, 14, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of random numbers and sort it in ascending and descending order. Remove the duplicates from the list and print the modified list.\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "random_numbers = [random.randint(1, 20) for _ in range(15)]\n",
+    "print(f\"Original list: {random_numbers}\")\n",
+    "\n",
+    "sorted_numbers = sorted(random_numbers)\n",
+    "print(f\"Sorted in ascending order: {sorted_numbers}\")\n",
+    "\n",
+    "sorted_numbers_desc = sorted(random_numbers, reverse=True)\n",
+    "print(f\"Sorted in descending order: {sorted_numbers_desc}\")\n",
+    "\n",
+    "unique_numbers = list(set(random_numbers))\n",
+    "print(f\"List with duplicates removed: {unique_numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b7537b0",
+   "metadata": {},
+   "source": [
+    "### Assignment 7: Nested Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "17eb34d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix:\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Element at second row and third column: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a nested list representing a 3x3 matrix and print the matrix. Access and print the element at the second row and third column.\n",
+    "\n",
+    "matrix = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "print(\"Matrix:\")\n",
+    "for row in matrix:\n",
+    "    print(row)\n",
+    "print(f\"Element at second row and third column: {matrix[1][2]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c848124a",
+   "metadata": {},
+   "source": [
+    "### Assignment 8: List of Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f21857bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted students by score in descending order:\n",
+      "{'name': 'Charlie', 'score': 95}\n",
+      "{'name': 'Alice', 'score': 88}\n",
+      "{'name': 'Eve', 'score': 78}\n",
+      "{'name': 'Bob', 'score': 72}\n",
+      "{'name': 'David', 'score': 65}\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' Create a list of dictionaries where each dictionary represents a student with keys 'name' and 'score'. \n",
+    " Sort the list of dictionaries by the 'score' in descending order and print the sorted list. '''\n",
+    "\n",
+    "\n",
+    "students = [\n",
+    "    {'name': 'Alice', 'score': 88},\n",
+    "    {'name': 'Bob', 'score': 72},\n",
+    "    {'name': 'Charlie', 'score': 95},\n",
+    "    {'name': 'David', 'score': 65},\n",
+    "    {'name': 'Eve', 'score': 78}\n",
+    "]\n",
+    "sorted_students = sorted(students, key=lambda x: x['score'], reverse=True)\n",
+    "print(\"Sorted students by score in descending order:\")\n",
+    "for student in sorted_students:\n",
+    "    print(student)"
    ]
   }
  ],
