--- a/3_Data_Structures/02_tuples.ipynb
+++ b/3_Data_Structures/02_tuples.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1813d024",
    "metadata": {},
    "outputs": [
@@ -62,10 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "66b43f9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
     "lst=list()\n",
     "print(type(lst))\n",
@@ -75,10 +84,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4c99a7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers = tuple([1,2,3,4,5,6])\n",
     "numbers"
@@ -86,10 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c4610d97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Hello World', 3.14, True)\n"
+     ]
+    }
+   ],
    "source": [
     "mixed_tuple=(1,\"Hello World\",3.14, True)\n",
     "print(mixed_tuple)"
@@ -105,20 +133,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0de8f062",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "79e1e971",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "print(numbers[2])\n",
     "print(numbers[-1])"
@@ -126,20 +174,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ae417f71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers[0:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7c72a5bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 5, 4, 3, 2, 1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers[::-1]"
    ]
@@ -154,10 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bc910a19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 1, 'Hello World', 3.14, True)\n"
+     ]
+    }
+   ],
    "source": [
     "concatenation_tuple=numbers + mixed_tuple\n",
     "print(concatenation_tuple)"
@@ -165,10 +243,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7690738a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1,\n",
+       " 'Hello World',\n",
+       " 3.14,\n",
+       " True,\n",
+       " 1,\n",
+       " 'Hello World',\n",
+       " 3.14,\n",
+       " True,\n",
+       " 1,\n",
+       " 'Hello World',\n",
+       " 3.14,\n",
+       " True)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mixed_tuple * 3"
    ]
@@ -183,10 +283,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "52b6979f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 'Shadan', 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "## Tuples are immutable, meaning their elements cannot be changed once assigned.\n",
     "\n",
@@ -199,10 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "86467168",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numbers"
    ]
@@ -217,10 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a9e88ddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print(numbers.count(1))\n",
     "print(numbers.index(3))"
@@ -236,10 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c6beedac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Hello', 3.14)\n"
+     ]
+    }
+   ],
    "source": [
     "## packing\n",
     "packed_tuple=1,\"Hello\",3.14\n",
@@ -248,10 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "756a8500",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Hello\n",
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
     "##unpacking a tuple\n",
     "a,b,c=packed_tuple\n",
@@ -263,10 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "03b77d19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[2, 3, 4, 5]\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "## Unpacking with *\n",
     "numbers=(1,2,3,4,5,6)\n",
@@ -286,10 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "f49290fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "c\n"
+     ]
+    }
+   ],
    "source": [
     "nested_tuple = ((1, 2, 3), (\"a\", \"b\", \"c\"), (True, False))\n",
     "\n",
@@ -308,10 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f6fd5c14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "a b c \n",
+      "True False \n"
+     ]
+    }
+   ],
    "source": [
     "## iterating over nested tuples\n",
     "for sub_tuple in nested_tuple:\n",
